# Beyond-Neural-Networks

./: LICENSE  METRICS.md  README.md  pyproject.toml  requirements.txt
docs/: algorithm.md
experiments/: run_benchmarks.py
outputs/metrics/: activation_matrix.csv  classification_confusion_matrix_test.csv  classification_metrics.csv  denoising_metrics.csv  metrics_summary.json
outputs/models/: glwt_denoiser_params.json  karate_rule_classifier.json
outputs/rules/: karate_rules.txt
src/glwt_logic/: __init__.py  chebyshev.py  denoise.py  glwt.py  graph_utils.py  rules.py  synthetic.py
tests/: test_glwt.py
